2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.1 ===

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/treeview.gtkrc: Simplify treeview theming example using
	wildcards

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (match_theme_image): Add simple pattern matching
	for the 'detail' to simplify treeview theming. Only leading wildcard
	is supported. In gtkrc 'detail = "*_start"' will match all details
	ending with "_start" such as "cell_even_start", "cell_odd_start",
	"cell_even_ruled_start", etc.

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/Makefile.am
	* demos/treeview.c
	* demos/treeview.gtkrc
	* demos/images/treeview-*.png: Example for treeview active / passive
	focus theming

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (maybe_check_cursor_position)
	(draw_flat_box): When painting a treeview check if painting the cursor
	row, and adjust matching rules accordingly for active/passive focus

	Focus row background:
	  function = FLAT_BOX
	  state    = ACTIVE
	  shadow   = NONE for active, OUT for passive focus

2007-01-27  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (get_window_for_shape): Consider setting the
	window shape mask only when painting to widget->window, otherwise it
	can cause an infinite expose loop.

2007-01-25  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.0 ===

2007-01-25  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* Makefile.am (SUBDIRS)
	* configure.in (AC_OUTPUT): add demos directory

	* demos/run-demo: add wrapper script for running demos without
	installing libsapwood.so
	* demos/buttonbox.c
	* demos/buttonbox.gtkrc
	* demos/images/hbbox*.png: Example for dialog button theming

2007-01-24  Tommi Komulainen  <tommi.komulainen@nokia.com>

	Implement dialog buttons using explicit "position" keyword. The